--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -175,7 +175,7 @@ form.donnovo input, form.donnovo textarea{
 }
 
 .text-colored{
-    color: #a30f0f;
+    color: #E11236;
     font-weight: bold;
 }
 
@@ -449,4 +449,113 @@ form.donnovo input, form.donnovo textarea{
 		-webkit-transform: scale(1);
 		transform: scale(1);
 	}
+}
+
+/*********************
+   4.2 Infos
+*********************/
+
+
+nav>.nav.nav-tabs {
+
+	border: none;
+	color: #000;
+	background: #eee;
+	border-radius: 0;
+
+}
+
+.info-item nav>div a.nav-item.nav-link,
+nav>div a.nav-item.nav-link.active {
+	border: none;
+	padding: 18px 25px;
+	color: #000;
+	background: #eee;
+	border-radius: 0;
+}
+
+/* .info-item nav>div a.nav-item.nav-link.active:after {
+	content: "";
+	position: relative;
+	bottom: -60px;
+	left: -15%;
+	border: 15px solid transparent;
+	border-top-color: #E11236;
+} */
+
+.info-item .tab-content {
+	background: #fdfdfd;
+	line-height: 25px;
+	border: 1px solid #ddd;
+	border-top: 5px solid #E11236;
+	border-bottom: 5px solid #E11236;
+	padding: 30px 25px;
+}
+
+.info-item nav>div a.nav-item.nav-link.active,
+.info-item nav>div a.nav-item.nav-link:hover,
+.info-item nav>div a.nav-item.nav-link:focus {
+	border: none;
+	background: #E11236;
+	color: #fff;
+	border-radius: 0;
+	transition: background 0.20s linear;
+}
+
+
+.btn-grey{
+    background-color:#D8D8D8;
+	color:#FFF;
+}
+.rating-block{
+	background-color:#FAFAFA;
+	border:1px solid #EFEFEF;
+	padding:15px 15px 20px 15px;
+	border-radius:3px;
+}
+.bold{
+	font-weight:700;
+}
+.padding-bottom-7{
+	padding-bottom:7px;
+}
+
+.review-block{
+	background-color:#FAFAFA;
+	border:1px solid #EFEFEF;
+	padding:15px;
+	border-radius:3px;
+	margin-bottom:15px;
+}
+.review-block-name{
+	font-size:12px;
+	margin:10px 0;
+}
+.review-block-date{
+	font-size:12px;
+}
+.review-block-rate{
+	font-size:13px;
+	margin-bottom:15px;
+}
+.review-block-title{
+	font-size:15px;
+	font-weight:700;
+	margin-bottom:10px;
+}
+.review-block-description{
+	font-size:13px;
+}
+
+.info-header
+{
+	text-align: center;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	font-weight: bold;
+}
+
+.info-item .tab-pane p,
+.info-item .tab-pane ul
+{
+	padding-left: 2em;
 }
