--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -46,6 +46,7 @@ body{
 }
 
 .envio-info .description {
+	font-family: 'Open Sans', sans-serif;
 	color: #a3a3a3;
 	font-style: italic;
 	font-size: 16px;
@@ -98,6 +99,7 @@ body{
 }
 
 .sobre-right{
+	font-family: 'Open Sans', sans-serif;
     float: right;
     color: #FFF;
     background: rgba(0,0,0,0.55);
@@ -105,7 +107,8 @@ body{
     position: absolute;
     top: 20%;
     left: 20%;
-    text-align: justify;
+	text-align: justify;
+	padding: 10px;
     -webkit-transition: all 1s ease;
 	/* Safari and Chrome */
 	-moz-transition: all 1s ease;
@@ -131,12 +134,21 @@ body{
 
 footer{
     background: #000;
-    padding: 4em;
+    padding: 4em 4em 0 4em;
     color: #fff;
 }
 
 .borderfooter{
     border-right: 2px #fff solid;
+}
+
+ul.list-unstyled.remove-link{
+	font-family: 'Open Sans', sans-serif;
+}
+
+.info-local{
+	font-family: 'Open Sans', sans-serif;
+	padding: 10px;
 }
 
 .remove-link li a{
@@ -353,6 +365,14 @@ form.donnovo input, form.donnovo textarea{
 	margin-bottom: 15px;
 }
 
+.rating{
+	font-family: "Open Sans", sans-serif;
+}
+
+.product-description{
+	font-family: "Open Sans", sans-serif;
+}
+
 .product-title {
 	margin-top: 0;
 }
@@ -550,7 +570,7 @@ nav>div a.nav-item.nav-link.active {
 .info-header
 {
 	text-align: center;
-	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	font-family: "MochaMattariW01-Regular";
 	font-weight: bold;
 }
 
@@ -558,4 +578,34 @@ nav>div a.nav-item.nav-link.active {
 .info-item .tab-pane ul
 {
 	padding-left: 2em;
+	font-family: "Open Sans", sans-serif;
+}
+
+.icone-footer{
+	width: 22px;
+	filter: invert(1);
+}
+
+
+.icone-fsocial{
+	margin-top: 10px;
+	width: 42px;
+	filter: invert(1);
+}
+
+.envinfos-ic{
+	width: 60px;
+}
+
+.bg-contato{
+	background-image: url("assets/images/Contato.jpeg");
+}
+
+.fonte-simples{
+	font-family: "Open Sans", sans-serif;
+}
+
+.fonte-simples a{
+	text-decoration: none;
+	color: white;
 }
