--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -30,6 +30,9 @@
         text-align: left;
         color: #800000;
     }
+    .logo-box{
+        right: 70%;
+    }
 }
 
 @media only screen and (max-width: 991px)
@@ -57,6 +60,9 @@
     }
     .borderfooter{
         border-right: none;
+    }
+    .logo-box{
+        display:none !important;
     }
 }
 
