--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,12 +1,11 @@
-@media only screen and (max-width: 1366px)
-{
-    .carousel-caption{
-        right:40%;
+@media only screen and (max-width: 1366px) {
+    .carousel-caption {
+        right: 40%;
         bottom: 25%;
         text-align: left;
     }
-    
-    .carousel-caption h5{
+
+    .carousel-caption h5 {
         font-size: 3em;
         font-weight: bold;
         font-style: italic;
@@ -15,131 +14,173 @@
     }
 }
 
-@media only screen and (max-width: 1199px)
-{
-    .carousel-caption{
-        right:40%;
+@media only screen and (max-width: 1199px) {
+    .carousel-caption {
+        right: 40%;
         bottom: 14%;
         text-align: left;
     }
-    
-    .carousel-caption h5{
+
+    .carousel-caption h5 {
         font-size: 2.5em;
         font-weight: bold;
         font-style: italic;
         text-align: left;
         color: #800000;
     }
-    .logo-box{
+
+    .logo-box {
         right: 70%;
+    }
+
+    .searchbox.col-lg-5.offset-lg-2.pt-2{
+        margin-right: 44px;
     }
 }
 
-@media only screen and (max-width: 991px)
-{
-	.carousel-caption{
-        right:40%;
+@media only screen and (max-width: 991px) {
+    .carousel-caption {
+        right: 40%;
         bottom: 4%;
         text-align: left;
     }
-    
-    .carousel-caption h5{
+
+    .carousel-caption h5 {
         font-size: 2em;
         font-weight: bold;
         font-style: italic;
         text-align: left;
         color: #800000;
     }
-    .envio-info{
+
+    .envio-info {
         height: 11em;
     }
 
-    .sobre-right{
+    .sobre-right {
         top: 7%;
         left: 35%;
     }
-    .borderfooter{
+
+    .borderfooter {
         border-right: none;
     }
-    .logo-box{
-        display:none !important;
+
+    .logo-box {
+        display: none !important;
     }
 }
 
-@media only screen and (max-width: 767px)
-{
-    .envio-info .bold-text
-    {
+@media only screen and (max-width: 767px) {
+    .envio-info .bold-text {
         font-size: 13.5px;
     }
-    .sobre-right{
+
+    .sobre-right {
         top: 10%;
         left: 35%;
+        font-size: 0.95em;
     }
-    .sobre-right p{
+
+    .sobre-right p {
         font-size: 0.9em;
     }
-    .borderfooter{
+
+    .borderfooter {
         border-right: none;
     }
 }
 
-@media only screen and (max-width: 575px)
-{
-    .sobre-right{
+@media only screen and (max-width: 575px) {
+    .sobre-right {
         top: 10%;
         right: 3%;
         font-size: 0.9em;
     }
-    .borderfooter{
+
+    .borderfooter {
         border-right: none;
+    }
+    footer{
+        text-align: center;
+    }
+    .iconesfooter{
+        justify-content: center;
     }
 }
 
-@media only screen and (max-width: 505px)
-{
-    .sobre-right{
+@media only screen and (max-width: 505px) {
+    .sobre-right {
         top: 10%;
         right: 3%;
-        font-size: 0.9em;
+        font-size: 0.862em;
     }
-    .borderfooter{
+
+    .borderfooter {
         border-right: none;
+    }
+    footer{
+        text-align: center;
+    }
+    .iconesfooter{
+        justify-content: center;
     }
 }
 
-@media only screen and (max-width: 484px)
-{
-    .sobre-right{
+@media only screen and (max-width: 484px) {
+    .sobre-right {
         top: 10%;
         right: 3%;
-        font-size: 0.9em;
+        font-size: 0.84em;
     }
-    .borderfooter{
+
+    .borderfooter {
         border-right: none;
+    }
+    footer{
+        text-align: center;
+    }
+    .iconesfooter{
+        justify-content: center;
     }
 }
 
-@media only screen and (max-width: 420px)
-{
-    .sobre-right{
+@media only screen and (max-width: 420px) {
+    .sobre-right {
         top: 3%;
         right: 3%;
-        font-size: 0.868em;
+        font-size: 0.8em;
     }
-    .borderfooter{
+
+    .borderfooter {
         border-right: none;
+    }
+    footer{
+        text-align: center;
+    }
+    .iconesfooter{
+        justify-content: center;
     }
 }
 
-@media only screen and (max-width: 380px)
-{
-    .sobre-right{
+@media only screen and (max-width: 380px) {
+    .sobre-right {
         top: 2%;
         right: 3%;
-        font-size: 0.85em;
+        font-size: 0.75em;
     }
-    .borderfooter{
+
+    .borderfooter {
         border-right: none;
+    }
+
+    .info-local {
+        font-size: 11px;
+    }
+    footer{
+        text-align: center;
+    }
+    .iconesfooter{
+        justify-content: center;
     }
 }
