--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -40,7 +40,9 @@
     .searchbox.col-lg-5.offset-lg-2.pt-2{
         margin-right: 44px;
     }
-    
+    .vitrine-card{
+        font-size: 3.2em;
+    }
     .pdgl-4{
         padding-left: 8rem;
     }
@@ -81,6 +83,9 @@
         max-height: 220px;
         height: 220px;
     }
+    .vitrine-card{
+        font-size: 2.9em;
+    }
     .pdgl-4{
         padding-left: 0;
     }
@@ -109,7 +114,7 @@
         height: 170px;
     }
     .vitrine-card{
-        top: 10px !important;
+        font-size: 1.8em;
     }
     .pdgl-4{
         padding-left: 0;
@@ -135,6 +140,18 @@
     .cardvitrinetop{
         max-height: 250px;
         height: 250px;
+    }
+    .vitrine-card{
+        font-size: 4em;
+    }
+    .card .vitrine-card .card-title{
+        display: block;
+        -moz-animation: fadeIn 2s;
+        -webkit-animation: fadeIn 2s;
+        animation: fadeIn 2s;
+    }
+    .card.bg-dark .vitrine-card{
+        background: rgba(0,0,0,0.5);
     }
     .pdgl-4{
         padding-left: 0;
@@ -201,6 +218,18 @@
     }
     .pdgl-4{
         padding-left: 0;
+    }
+    .vitrine-card{
+        font-size: 3em;
+    }
+    .card .vitrine-card .card-title{
+        display: block;
+        -moz-animation: fadeIn 2s;
+        -webkit-animation: fadeIn 2s;
+        animation: fadeIn 2s;
+    }
+    .card.bg-dark .vitrine-card{
+        background: rgba(0,0,0,0.5);
     }
 }
 
